[package]
name = "npm-download-stats-otel-exporter"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
reqwest = { version = "0.12.24", default-features = false, features = ["rustls-tls"] }
scraper = "0.25.0"
tokio = { version = "1.48.0", features = ["full"] }
opentelemetry = { version = "0.31", features = ["metrics"] }
opentelemetry_sdk = { version = "0.31", features = ["metrics", "rt-tokio"] }
opentelemetry-otlp = { version = "0.31", features = ["metrics", "grpc-tonic"] }
